--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <title>OVSS</title>
 
     <!--Tab Logo-->
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/Assets/Logo/Logo.png"> 
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/Assets/Logo/Tab_Logo.png"> 
 
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
